recursion.logo.koch.PentaKoch.scala.error
Erreur de compilation :
PentaKoch:1: error: Missing closing brace `}' assumed here
def snowSquare (levels:Int, length:Double) {
^PentaKoch:1: error: expected class or object definition
def snowSquare (levels:Int, length:Double) {
^